--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -23,6 +23,10 @@ tr[data-mealExceed="true"] {
     color: red;
 }
 
+tr[data-userEnabled="false"] {
+    opacity: 0.3;
+}
+
 .fa {
     cursor: pointer;
 }
